# EmbryoVision

./: LICENSE  Pipfile  README.md  docker-compose.yml  file_extraction.py  pyproject.toml  run.py
analysis/: analysis.py
app/: main.py
app/api/: middleware.py
app/api/routers/: health.py  inference.py  monitoring.py
app/core/: config.py  logging.py
app/inference/: manager.py
app/models/: optimization.py  vit_classifier.py  yolo_detector.py
app/monitoring/: metrics.py
depdl/: justfile  manage.py
depdl/deepapp/: admin.py  apps.py  cnn_model.py  models.py  urls.py  views.py
depdl/deepapp/migrations/: 0001_initial.py  0002_rename_pud_date_question_pub_date.py  0003_image.py  0004_delete_choice_delete_question.py  0005_image_results.py
depdl/deepapp/serializers/: get_labels.py  image.py
depdl/deepapp/templates/: back.js  image_work.html
depdl/deepapp/views/: gen_labels.py  image.py  views_test.py
depdl/depdl/: asgi.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  backend.Dockerfile  entrypoint.sh
models/attention_based/: attention_network.py  se_and_att.py
models/simple/: cnn_model.py  cnn_realization.py  loss.py
preprocessing/: dataset_creation.py  extract_data.py  for_test.py  loss.py  resizing.py  toy_model.py
scripts/: download_models.py
utils/: EarlyStopping.py  tools.py
