[tool.poetry]
name = "embryovision"
version = "1.0.0"
description = "Real-Time Embryo Quality Scoring with YOLOv8 + ViT-B/32"
authors = ["Eduard Akinfiev <akinfiev@arizona.edu>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pydantic = "^2.5.0"
torch = "^2.1.2"
torchvision = "^0.16.2"
ultralytics = "^8.0.224"
transformers = "^4.36.2"
timm = "^0.9.12"
onnx = "^1.15.0"
onnxruntime = "^1.16.3"
openvino = "^2023.3.0"
tensorrt = "^8.6.1"
pillow = "^10.1.0"
numpy = "^1.24.3"
opencv-python = "^4.8.1.78"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
wandb = "^0.16.0"
mlflow = "^2.8.1"
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
redis = "^5.0.1"
celery = "^5.3.4"
httpx = "^0.25.2"
aiofiles = "^23.2.1"
python-multipart = "^0.0.6"
streamlit = "^1.28.2"
gradio = "^4.8.0"
albumentations = "^1.3.1"
pytorch-lightning = "^2.1.3"
hydra-core = "^1.3.2"
rich = "^13.7.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
jupyter = "^1.0.0"
ipykernel = "^6.27.1"

[tool.poetry.group.monitoring.dependencies]
grafana-client = "^3.5.0"
prometheus-fastapi-instrumentator = "^6.1.0"

[tool.poetry.group.deployment.dependencies]
docker = "^6.1.3"
kubernetes = "^28.1.0"
ansible = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.poetry.scripts]
embryovision = "app.cli:app" 